default.css
@media (prefers-color-scheme: light) {
    :root {
        --text-50: #ecf8f4;
        --text-100: #daf1ea;
        --text-200: #b5e3d5;
        --text-300: #8fd6bf;
        --text-400: #6ac8aa;
        --text-500: #45ba95;
        --text-600: #379577;
        --text-700: #297059;
        --text-800: #1c4a3c;
        --text-900: #0e251e;
        --text-950: #07130f;
        
        --background-50: #edf7f5;
        --background-100: #dbf0eb;
        --background-200: #b8e0d6;
        --background-300: #94d1c2;
        --background-400: #70c2ad;
        --background-500: #4db399;
        --background-600: #3d8f7a;
        --background-700: #2e6b5c;
        --background-800: #1f473d;
        --background-900: #0f241f;
        --background-950: #08120f;
        
        --primary-50: #ebfaf6;
        --primary-100: #d7f4ec;
        --primary-200: #afe9da;
        --primary-300: #87dec7;
        --primary-400: #5fd3b4;
        --primary-500: #37c8a1;
        --primary-600: #2ca081;
        --primary-700: #217861;
        --primary-800: #165041;
        --primary-900: #0b2820;
        --primary-950: #051410;
        
        --secondary-50: #eafaf6;
        --secondary-100: #d6f5ed;
        --secondary-200: #acecdb;
        --secondary-300: #83e2c9;
        --secondary-400: #5ad8b7;
        --secondary-500: #30cfa4;
        --secondary-600: #27a584;
        --secondary-700: #1d7c63;
        --secondary-800: #135342;
        --secondary-900: #0a2921;
        --secondary-950: #051510;
        
        --accent-50: #eafbf6;
        --accent-100: #d4f7ee;
        --accent-200: #a9efdc;
        --accent-300: #7ee7cb;
        --accent-400: #54deb9;
        --accent-500: #29d6a8;
        --accent-600: #21ab86;
        --accent-700: #188165;
        --accent-800: #105643;
        --accent-900: #082b22;
        --accent-950: #041511;
  
    }
}
@media (prefers-color-scheme: dark) {
    :root {
        --text-50: #07130f;
        --text-100: #0e251e;
        --text-200: #1c4a3c;
        --text-300: #297059;
        --text-400: #379577;
        --text-500: #45ba95;
        --text-600: #6ac8aa;
        --text-700: #8fd6bf;
        --text-800: #b5e3d5;
        --text-900: #daf1ea;
        --text-950: #ecf8f4;

        --background-50: #08120f;
        --background-100: #0f241f;
        --background-200: #1f473d;
        --background-300: #2e6b5c;
        --background-400: #3d8f7a;
        --background-500: #4db399;
        --background-600: #70c2ad;
        --background-700: #94d1c2;
        --background-800: #b8e0d6;
        --background-900: #dbf0eb;
        --background-950: #edf7f5;

        --primary-50: #051410;
        --primary-100: #0b2820;
        --primary-200: #165041;
        --primary-300: #217861;
        --primary-400: #2ca081;
        --primary-500: #37c8a1;
        --primary-600: #5fd3b4;
        --primary-700: #87dec7;
        --primary-800: #afe9da;
        --primary-900: #d7f4ec;
        --primary-950: #ebfaf6;

        --secondary-50: #051510;
        --secondary-100: #0a2921;
        --secondary-200: #135342;
        --secondary-300: #1d7c63;
        --secondary-400: #27a584;
        --secondary-500: #30cfa4;
        --secondary-600: #5ad8b7;
        --secondary-700: #83e2c9;
        --secondary-800: #acecdb;
        --secondary-900: #d6f5ed;
        --secondary-950: #eafaf6;

        --accent-50: #041511;
        --accent-100: #082b22;
        --accent-200: #105643;
        --accent-300: #188165;
        --accent-400: #21ab86;
        --accent-500: #29d6a8;
        --accent-600: #54deb9;
        --accent-700: #7ee7cb;
        --accent-800: #a9efdc;
        --accent-900: #d4f7ee;
        --accent-950: #eafbf6;
    }
}
  
:root {
    --text: var(--text-900);
    --background: var(--background-50);
    --primary: var(--primary-500);
    --secondary: var(--secondary-50);
    --accent: var(--accent-500);
}

/* Positions */
.top { top: 12px; position: absolute; }
.bottom { bottom: 12px; position: absolute; }
.left { left: 12px; position: absolute; }
.right { right: 12px; position: absolute; }

/* Browser Default overwrites */
* {
    font-family: sans-serif;
    color: var(--text);
}

html {
    background: var(--background);
}

div {
    display: flex;
    
    gap: 8pt;
}

a {
    color: var(--accent-500);
    min-width: max-content;
}

a.button {
    background: var(--accent-200);
    color: var(--text-800);

    padding: 8pt 12pt;
    border-radius: 8pt;

    text-decoration: none;
}

a.button:hover {
    background: var(--accent-300);
    color: var(--text-900);
}

/* Wrapper */
.wrapperVisible {
    padding: 8pt;
    border-radius: 16pt;
    width: fit-content;

    background: var(--accent-100);
}

/* Property Classes */
.containerVertical {
    flex-direction: column;
}

.containerHorizontal {
    flex-direction: row;
}

.header {
    position: absolute;
    top: 0pt;
    left: 0pt;
    right: 0pt;
    height: 48pt;

    background: var(--background);
    color: var(--text);
}

/* Content Holders */
.container {
    position: absolute;
    min-width: fit-content;
}

.container#topleft      { top: 12pt; align-items: start; left: 0pt; justify-content: start; }
.container#top          { width: 100%; top: 12pt; align-items: start; justify-content: center; }
.container#topright     { top: 12pt; align-items: start; right: 0pt; justify-content: end; }
.container#left         { height: 100%; align-items: center; left: 0pt; justify-content: start; }
.container#center       { width: 100%; height: 100%; align-items: center; justify-content: center; }
.container#right        { height: 100%; align-items: center; right: 0pt; justify-content: end; }
.container#bottomleft   { bottom: 12pt; align-items: end; left: 0pt; justify-content: start; }
.container#bottom       { width: 100%; bottom: 12pt; align-items: end; justify-content: center; }
.container#bottomright  { bottom: 12pt; align-items: end; right: 0pt; justify-content: end; }

